<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/page2">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:id="@+id/First_Name"
                android:layout_marginTop="44dp"
                android:layout_marginLeft="44dp"

                android:layout_marginStart="44dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_first"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape"
                    android:hint="@string/first_name"

                    android:inputType="text"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                android:id="@+id/last_name"
                android:layout_marginTop="44dp"
                android:layout_marginEnd="44dp"
                android:layout_marginRight="44dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_user_last"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/custom_shape"
                    android:hint="@string/Last_name"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/Email"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"

        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape"
            android:hint="@string/email_hint"
            android:gravity="center"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/password"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape"
            android:hint="@string/Enter_pass"
            android:inputType="textPassword"

            android:gravity="center"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:id="@+id/confirm_pass"
        android:layout_marginLeft="44dp"
        android:layout_marginRight="44dp"
        app:passwordToggleEnabled="true"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_user_confirm_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_shape"
            android:hint="@string/confirm_pass"
            android:gravity="center"
            android:inputType="textPassword"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioGroup
            android:layout_marginLeft="44dp"
            android:layout_marginRight="44dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/grp"
            >
            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/male"
                />
            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />
        </RadioGroup>
        <TextView
            android:layout_marginLeft="90dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Age"
            android:textSize="22dp"
            android:textColor="@color/black"
            />

        <Spinner
            android:id="@+id/age_shop"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:dropDownSelector="@drawable/custom_shape"
            android:spinnerMode="dropdown" />

    </LinearLayout>
    <CheckBox
        android:id="@+id/accept"
        android:layout_marginTop="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Check_box_text"
        android:layout_marginLeft="33dp"
        android:layout_marginStart="33dp" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:layout_marginRight="24dp"


            android:onClick="signup"
            android:text="@string/sign_up"
            android:textSize="20dp"
            app:backgroundTint="#9C27B0"
            app:cornerRadius="12dp"
            app:iconTint="#FFFFFF"
            app:strokeColor="#FFFFFF" />
    </RelativeLayout>



</LinearLayout>