<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".page2"
    android:background="@drawable/shoping">

    <Button
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Count"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:backgroundTint="#E91E63"
        app:cornerRadius="56dp"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166"
        app:rippleColor="#A6FF00"
        app:strokeColor="#FF5722" />

    <Button
        android:id="@+id/Shop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Shop"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:backgroundTint="#E91E63"
        app:cornerRadius="56dp"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.294"
        app:rippleColor="#A6FF00"
        app:strokeColor="#FF5722" />

    <Button
        android:id="@+id/Contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Contact"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:backgroundTint="#E91E63"
        app:cornerRadius="56dp"
        app:iconTint="#FFC107"
        android:onClick="contact"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.107"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.411"
        app:rippleColor="#A6FF00"
        app:strokeColor="#FF5722" />

    <Button
        android:id="@+id/Back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Back"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:backgroundTint="#E91E63"
        app:cornerRadius="56dp"
        app:iconTint="#FFC107"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.126"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.825"
        app:rippleColor="#A6FF00"
        app:strokeColor="#FF5722" />

    <TextView
        android:id="@+id/count_number1"
        android:layout_width="181dp"
        android:layout_height="74dp"
        android:gravity="center"
        android:text="@string/count_number"
        android:textColor="@color/black"

        android:textSize="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.388"
        app:layout_constraintStart_toEndOf="@+id/count"
        app:layout_constraintTop_toTopOf="@+id/count"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>